<resources>
    <string name="app_name">GeeksReads</string>
    <string name="MorsyTest1">MorsyTest1</string>
    <string name="ShroukTest1">ShroukTest1</string>
    <string name="TempAuthorName">Author Name</string>
    <string name="TempBookTitle">Book Title</string>
    <string name="TempRatingNumber">Ratings No.</string>
    <string name="TempReviewsNumber">Reviews No.</string>
    <string name="BookDescriptionTxt">Book Description</string>
    <string name="BookImageDescription">Cover</string>
    <string name="TempDesc">     Here will be the Description of the Book</string>
    <string name="OrLoginHere">Or if you already have an account,</string>
    <string name="LoginBtnTxt">Login</string>
    <string name="SignUpBtnTxt">Sign Up</string>
    <string name="NewPasswordHint">New Password</string>
    <string name="ConfirmNewPasswordHint">Confirm New Password</string>
    <string name="OldPasswordHint">Old Password</string>
    <string name="FullNameHint">Full Name</string>
    <string name="UsernameHint">Username</string>
    <string name="DisplayNameHint">Display Name</string>
    <string name="PasswordHint">Password</string>
    <string name="EmailHint">Email Address</string>
    <string name="BirthDateHint">Birth Date Day/Month/Year</string>
    <string name="ChangePasswordBtnTxt">Change Password</string>
    <string name="SaveChangesBtnTxt">Save Changes</string>
    <string name="SignUpHeaderTxt">Create a new account in geeksreads</string>
    <string name="UserProfilePicture">User\'s Profile Picture</string>
    <string name="OtherProfilePicture">User\'s Profile Picture</string>
    <string name="OtherBooks">Number of books here</string>
    <string name="collapse_text_label">See Less</string>
    <string name="expand_text_label">See More</string>
    <string name="OtherProfileName">Other User Name</string>
    <string name="ActualBookNumber">Number of books</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="EditProfileLogo">Logo of Edit Button</string>
    <string name="CancelTxt">Cancel</string>
    <string name="NumberFollowers">Number of Followers</string>
    <string name="NumberFollowing">Number of Following</string>
    <string name="ActualNumberFollowers">Number Here</string>
    <string name="ActualNumberFollowing">Number Here</string>
    <string name="ReadTxt">   Read</string>
    <string name="ReviewsText">Reviews</string>
    <string name="Followers">Followers</string>
    <string name="Following">Following</string>
    <string name="FollowUnfollow">Un\\Follow</string>
    <string name="CurrentlyReadingTxt">   Currently Reading</string>
    <string name="WantToReadTxt">   Want to Read</string>
    <string name="ButtonText">Button</string>
    <string name="SearchText">Button</string>
    <string name="PublishedOnString">Originally Published on:</string>
    <string name="PublishedDay">Day</string>
    <string name="PublishedMonth">Month</string>
    <string name="PublishedYear">Year</string>
    <string name="FollowerString">Followers</string>
    <string name="FollowingString">Following</string>
    <string name="title_activity_side_bar">SideBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="NotificationBody">Notification Body</string>
    <string name="NotificationDate">Notification Date</string>
    <string name="PagesNumbers"> # Pages </string>
    <string name="AddReviewTxt"> Add Review</string>
    <string name="AddShelf"> Add </string>
    <string name="MyShelves">My Book Shelves</string>
    <string name="AddReviewString">Ask anything about the book</string>

    <string-array name="BookValues">
        <item>Want to Read</item>
        <item>Read</item>
        <item>Currently Reading</item>
    </string-array>

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="Countries">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cabo Verde</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Central African Republic (CAR)</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo, Democratic Republic of the</item>
        <item>Congo, Republic of the</item>
        <item>Costa Rica</item>
        <item>Cote d\'Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czechia</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Eswatini (formerly Swaziland)</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar (formerly Burma)</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Korea</item>
        <item>North Macedonia (formerly Macedonia)</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestine</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates (UAE)</item>
        <item>United Kingdom (UK)</item>
        <item>United States of America (USA)</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City (Holy See)</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="SignOutTxt">Thank you for using Geekreads. You have been signed out. To Log in again, press the Login button and to create a new account, press Sign up button.</string>
    <string name="otpHint">Verification Code</string>
    <string name="SaveChangedPassword">Save New Password</string>
    <string name="OrForgetPassword">"If you forgot your password, "</string>
    <string name="ForgetPassword">Click Here</string>
    <string name="OrSignUpTxt">"Or to create a new account, "</string>
    <string name="UploadPhotoBtnTxt">Upload New Photo</string>
    <string name="ChooseNewPhotoTxt">Choose a New Photo</string>
</resources>
