<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/BookImage"
            android:layout_width="212dp"
            android:layout_height="120dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/BookImageDescription"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/BookNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/TempBookTitle" />

            <TextView
                android:id="@+id/ByAuthorNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TempAuthorName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BookRatingsTxt"
                    android:layout_width="156dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TempRatingNumber" />

                <TextView
                    android:id="@+id/ratingBar"
                    android:layout_width="156dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TempRatingNumber" />

            </LinearLayout>

            <TextView
                android:id="@+id/PublishData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PublishedOnString" />

            <TextView
                android:id="@+id/pageNumbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PagesNumbers" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>