<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BookActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar">
    </include>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/BookCover"
                android:layout_width="match_parent"
                android:layout_height="332dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorToolbar"
                android:contentDescription="@string/BookImageDescription"
                app:srcCompat="@android:drawable/ic_menu_report_image" />

            <TextView
                android:id="@+id/BookTitleTxt"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/TempBookTitle"
                android:textAlignment="center"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/AuthorNameTxt"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/TempAuthorName"
                android:textAlignment="center"
                android:textSize="24sp" />

            <View
                android:id="@+id/FirstDivider"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/colorNotificationbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/TempRatingNumber"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/RatingsNumberTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/TempRatingNumber"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ReviewsNumberTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/TempReviewsNumber"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:id="@+id/SecondDivider"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/colorNotificationbar" />

            <Spinner
                android:id="@+id/OptionsDropList"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#f4f1ea"
                android:backgroundTint="@color/colorToolbar"
                android:entries="@array/BookValues" />

            <TextView
                android:id="@+id/BookDescriptionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/BookDescriptionTxt"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/ThirdDivider"
                android:layout_width="150dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/colorNotificationbar" />

            <TextView
                android:id="@+id/DescriptionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scrollbars="vertical"
                android:text="@string/TempDesc"
                android:textSize="18sp" />


            <View
                android:id="@+id/FourthDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PublishedOnTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/PublishedOnString"
                    android:textAlignment="textEnd"
                    android:textColorLink="@android:color/background_dark" />

                <TextView
                    android:id="@+id/PublishedOnMonth"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/PublishedMonth"
                    android:textAlignment="textEnd"
                    android:textColorLink="@android:color/background_dark" />

                <TextView
                    android:id="@+id/PublishedOnDay"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/PublishedDay"
                    android:textAlignment="center"
                    android:textColorLink="@android:color/background_dark" />

                <TextView
                    android:id="@+id/PublishedOnYear"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/PublishedYear"
                    android:textAlignment="viewStart"
                    android:textColorLink="@android:color/background_dark" />
            </LinearLayout>

            <View
                android:id="@+id/FifthDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@android:color/black" />


        </LinearLayout>


    </ScrollView>



</LinearLayout>