<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChooseShelfActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <include
            layout="@layout/book_template"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/BookDescriptionTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/MyShelves"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/ThirdDivider"
        android:layout_width="148dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="15dp">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <RadioButton
                android:id="@+id/radioReading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/CurrentlyReadingTxt" />

            <RadioButton
                android:id="@+id/radioWantRead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/WantToReadTxt" />

            <RadioButton
                android:id="@+id/radioRead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ReadTxt" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddReviewBtn" />

</LinearLayout>
