<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignOutActivity">

    !-- Progress bar overlay; shown while progress -->
    <include layout="@layout/include_loading"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/logo_vertically"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:id="@+id/headerLabel"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/SignOutTxt" />

    <Button
        android:id="@+id/loginBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="10dp"
        android:background="@color/color0"
        android:text="@string/LoginBtnTxt" />

    <Button
        android:id="@+id/signupBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="10dp"
        android:background="@color/color0"
        android:text="@string/SignUpBtnTxt" />
</LinearLayout>